--- a/about.us.html
+++ b/about.us.html
@@ -22,36 +22,54 @@
 
       <h3>SERVICES OFFERED</h3>
       <li>
-         food packaging
-         quick deliveries
-         customer care services
+         <li>food packaging</li>
+         <li>quick deliveries</li>
+         <li>customer care services</li>
       </li>
 
       <h3>FOOD STUFFS AND DRINKS OFFERED</h3>
        <ul>
-          pizzas (beef, chicken & vegatables)
-          burgers
-          chips  and ckicken
-          local foods
-          sta chicken
-          juice (all kinds)
-          soda
-          water
+          <ul>pizzas (beef, chicken & vegatables)</ul>
+          <ul>burgers</ul>
+          <ul>chips  and ckicken</ul>
+          <ul>local foods</ul>
+          <ul>sta chicken</ul>
+          <ul>juice (all kinds)</ul>
+          <ul>soda</ul>
+         <ul> water</ul>
 
        </ul>
 
        <iframe width="700" height="315" src="https://www.youtube.com/embed/N6dO8UwjDZM?si=dRAkm5RBPV_EQWfy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br><br>
 
-    <img width="500" height="700" src="images/Roostas-1000x1681-px.webp" alt="images">
+   
+    <img width="700" height="50%" src="images/burgers_kebab_pizza_003_692x306.jpg" alt="images">
+    <img width="700" height="50%" src="images/burgers_kebab_pizza_038_692x306.jpg" alt="images">
+ 
+ <img width="700" height="50%" src="images/Roostas-1000x1681-px.webp" alt="images">
+
+<h3> Why choose lucy foodhub?  </h3>
+<p>lucy foodhub provides the best quality food stuffs worldwide</p>
+<p>lucys after service care given to the customers</p>
+<p>the timely sercices provided by the workers to clients</p>
+
+
 
 
     <H3>LOCATION</H3>
      <p>Lucy foodhub is located along jinja road plot A opposite yuasa bond nakawa division </p>
      <p>Near nakawa police station next to makerere school of business(MUBS)</p>
 
+
+     <button> <a href="contact.us.html">CONTACT</a></button>
+
      <br><br>
      <a href="https://www.instagram.com/?hl=en">instagram</a>
      <a href="https://x.com/">X Twitter</a>
-     <a href="https://www.tiktok.com/en/">tiktok</a>
+     <a href="https://www.tiktok.com/en/">tiktok</a><br><br>
+
+
+
+     
 </body>
 </html>
