--- a/contact.us.html
+++ b/contact.us.html
@@ -12,6 +12,9 @@
 <h1> CONTACTUS US</h1>
 
 <img width="200" height="200" src="images/unnamed.webp" alt="images"><br>
+
+<p>We wud like to hear from your our beloved clients</p>
+<img width="700" src="images/The-Food-Hub.webp" alt="images"><br><br>
     <form>
          <input type="usernamae" placeholder="username"><br><br>
          <input type="useremail" placeholder="user email" ><br><br>
@@ -19,22 +22,29 @@
          <input type int ="phone number" placeholder="phone number"><br><br>
          <button>SEND</button><br>
 
+
      <div class="right">
 
-        <video width="700" height="500" src="videos/video.mp4" controls autoplay></video><br><br>
+        <video width="700" height="500" src="videos/video.mp4" controls autoplay muted></video><br><br>
 
-         <img width="900" height="600" src="images/life03-pic.jpg" alt="images">
         
+
+
+
      </div>
       
      <P>Press your order now for better services</P>
      <button>ORDER NOW</button>
     </form>
 
-    <br><br>
+    <br>
+
+
+    <h3>Message feedback</h3>
+    <input type="content"><br><br>
      <a href="https://www.instagram.com/?hl=en">instagram</a>
      <a href="https://x.com/">X Twitter</a>
-     <a href="https://www.tiktok.com/en/">tiktok</a>
+     <a href="https://www.tiktok.com/en/">tiktok</a><br><br>
 
 
 </body>
