--- a/index.html
+++ b/index.html
@@ -28,12 +28,18 @@
 
 
 <div class="background">
-    <img width="500" height="400" src="images/images.png" alt="images"><br>
+    <img width="700" src="images/The-Food-Hub.webp" alt="images"><br>
+
+
      
 </div>
 <br><br>
     <a href="https://www.instagram.com/?hl=en">instagram</a>
      <a href="https://x.com/">X Twitter</a>
-     <a href="https://www.tiktok.com/en/">tiktok</a>
+     <a href="https://www.tiktok.com/en/">tiktok</a> <br><br>
+
+
+<button> <a href="about.us.html">ABOUTUS</a></button>
+
 </body>
 </html>
