--- a/about.us.html
+++ b/about.us.html
@@ -104,8 +104,8 @@
     <div class="paragraph">
        <p>Lucy foodhub is located along jinja road plot A opposite yuasa bond nakawa division </p>
        <p>Near nakawa police station next to makerere school of business(MUBS)</p>
-       <p>Tel: +256705475513</p>
-       <p>Email: lucyfoodhub34@gmail.com</p>
+       <p>Tel: +256705475513 Email: lucyfoodhub34@gmail.com</p>
+     
 
      </div>
 <section class="footer">
