--- a/contact.us.html
+++ b/contact.us.html
@@ -19,8 +19,7 @@
 
 <div class="paragraph">
 <p>We wud like to hear from your our beloved clients</p>
-<p>Tel: +256705475513 </p>
-<p>Email: lucyfoodhub34@gmail.com</p>
+
 </div>
 
 <img width="100%" height="450" src="images/The-Food-Hub.webp" alt="images"><br><br>
@@ -49,6 +48,9 @@
 
 
     <button>SEND</button><br><br>
+
+    <p>Tel: +256705475513  Email: lucyfoodhub34@gmail.com</p>
+
 
     <section class="footer">
         <div class="link">
